# hashtree

./: .gitignore  AGENTS.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  release.yml
apps/hashtree-cc/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts
apps/hashtree-cc/e2e/: carousel.spec.ts  file-upload.spec.ts  p2p-connection.spec.ts  settings-worker.spec.ts  upload-history.spec.ts
apps/hashtree-cc/src/: App.svelte  main.ts  sw.ts
apps/iris/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
apps/iris-files/: boards.html  docs.html  index.html  maps.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  video.html  vite.boards.config.ts  vite.config.ts  vite.docs.config.ts  vite.maps.config.ts  vite.video.config.ts
apps/iris-files/e2e/: address-bar-tree-nav.spec.ts  anchor-links.spec.ts  blossom-fallback.spec.ts  boards-app.spec.ts  chunk-boundary-video.spec.ts  direct-tree-nav.spec.ts  docs-app.spec.ts  docs-image-collaboration.spec.ts  explorer.test.ts  feed-multiple-owners.spec.ts  git-push-htree.spec.ts  git-status-edit.spec.ts  hashtree-rs-connection.spec.ts  hashtree-rs-crosslang.spec.ts  htree-blossom.sh  link-visible-tree.spec.ts  live-video.spec.ts  livestream-viewer.spec.ts  nip34-pull-requests.spec.ts  playlist-management.spec.ts  readme.spec.ts  settings.spec.ts  sidebar-feed-direct-nav.spec.ts  social-graph-root.spec.ts  test-utils.ts  upload-download.spec.ts  video-direct-nav.spec.ts  video-feed-follows.spec.ts  video-upload.spec.ts  video-viewing.spec.ts  ws-interop.spec.ts  yjs-collaboration.spec.ts  yjs-comments.spec.ts  ytdlp-batch-upload.spec.ts
apps/iris-files/e2e-tauri/: address-bar-navigation.spec.ts  iris-address-bar-file-view.spec.ts  webview-history.spec.ts
apps/iris-files/src/: App.svelte  IrisApp.svelte  TreeRootRegistry.ts  appType.ts  global.d.ts  main-boards.ts  nip34.ts  refResolver.ts  store.ts  sw.ts  tauri.ts  treeRootCache.ts  webrtcProxy.ts  workerAdapter.ts
apps/iris-files/src-tauri/: Cargo.toml
apps/iris-files/tests/: basePathAssetRefs.test.ts  boardStorageFormat.test.ts  boardsColumnActionsMarkup.test.ts  boardsCommentFormMarkup.test.ts  htreeRepoRef.test.ts  prDiffLoadState.test.ts  treeRootRegistry.test.ts  treeRootSubscription.test.ts  viteBasePath.test.ts  wasmGitObjectImport.test.ts  workerNdkLogging.test.ts
apps/iris/e2e/: address-bar.spec.ts  fixtures.ts  launcher.spec.ts  navigation.spec.ts  settings.spec.ts
apps/iris/src/: App.svelte  main.ts
apps/iris/src-tauri/: Cargo.toml  tauri.conf.json
apps/iris/src-tauri/capabilities/: default.json  desktop.json
apps/iris/src-tauri/src/: history.rs  htree_protocol.rs  lib.rs  main.rs  nip07.rs  permissions.rs  relay_proxy.rs
docs/: HTS-01.md  nostr-webrtc-plan.md
packaging/scoop/: README.md  hashtree.json
packaging/winget/: Hashtree.Hashtree.installer.yaml  Hashtree.Hashtree.locale.en-US.yaml  Hashtree.Hashtree.yaml  README.md
rust/: Cargo.toml  README.md
rust/crates/fuse/: Cargo.toml  README.md
rust/crates/fuse/src/: lib.rs
rust/crates/git-remote-htree/: Cargo.toml  README.md
rust/crates/hashtree-blossom/: README.md
rust/crates/hashtree-cli/: Cargo.toml  README.md
rust/crates/hashtree-ffi/: Cargo.toml  build.rs
rust/crates/hashtree-ffi/src/: lib.rs
rust/scripts/: publish.sh
ts/: README.md  package.json  pnpm-lock.yaml
ts/e2e/: crosslang-sync.spec.ts  git-push-htree.spec.ts  git-status-edit.spec.ts  hashtree-rs-connection.spec.ts  hashtree-rs-crosslang.spec.ts  ws-interop.spec.ts
(+254 files in other folders)
