[package]
name = "hashtree-fuse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FUSE filesystem mount for hashtree content-addressed trees"

[dependencies]
hashtree-core.workspace = true
thiserror.workspace = true
futures.workspace = true

[features]
default = []
fuse = ["dep:fuser", "dep:libc"]

[dependencies.fuser]
version = "0.14"
optional = true

[dependencies.libc]
version = "0.2"
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
