[package]
name = "hashtree-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "UniFFI bindings for hashtree attachment operations"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "hashtree_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
hashtree-core.workspace = true
hashtree-blossom = { workspace = true, features = ["store"] }
nostr.workspace = true
hex.workspace = true
thiserror.workspace = true
uniffi = { version = "0.28", features = ["cli"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "io-util"] }
futures = "0.3"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
